force-app/main/default/objects/Challenge__c/Challenge__c.object-meta.xml
<CustomObject>
    <description>This object is the main object in the Operational Risk Review &amp; Management app. It stores all details relevant to various types of risk reviews.</description>
    <label>Operational Risk Review</label>
    <nameField>
        <displayFormat>C{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Risk Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>