force-app/main/default/objects/Challenge__c/fields/Actions_Recommended_by_ORM__c.field-meta.xml
<CustomField>
    <fullName>Actions_Recommended_by_ORM__c</fullName>
    <label>Actions Recommended</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>