force-app/main/default/objects/Challenge__c/fields/Challenge_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Challenge_End_Date__c</fullName>
    <label>Predicted End Date</label>
    <type>Date</type>
</CustomField>