force-app/main/default/objects/Challenge__c/fields/Challenge_Entity__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Operational Risk Reviews</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>