force-app/main/default/objects/Challenge__c/fields/Challenge_Entity_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Entity_Primary_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operational Risk Reviews (Challenge Entity Primary Contact)</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>