force-app/main/default/objects/Challenge__c/fields/Challenge_Entity_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Entity_Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operational Risk Reviews (Challenge Entity Secondary Contact)</relationshipLabel>
    <relationshipName>Challenges1</relationshipName>
    <type>Lookup</type>
</CustomField>