force-app/main/default/objects/Challenge__c/fields/Challenge_Report_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Report_Issue_Date__c</fullName>
    <label>Report Issue Date</label>
    <type>Date</type>
</CustomField>