force-app/main/default/objects/Challenge__c/fields/Challenge_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Start_Date__c</fullName>
    <label>Predicted Start Date</label>
    <type>Date</type>
</CustomField>