force-app/main/default/objects/Challenge__c/fields/Challenge_Title__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Title__c</fullName>
    <label>Risk Review Title</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>