force-app/main/default/objects/Challenge__c/fields/Challenge_Type__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Type__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName = &quot;Lessons_Learned&quot;, &quot;Ad hoc&quot;, &quot;&quot;)</defaultValue>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cycled</fullName>
            </value>
            <value>
                <fullName>Ad hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>