force-app/main/default/objects/Challenge__c/fields/Comments_Question_1_KOR_KI__c.field-meta.xml
<CustomField>
    <fullName>Comments_Question_1_KOR_KI__c</fullName>
    <label>Comments (Question 1, KOR-KI)</label>
    <type>TextArea</type>
</CustomField>