force-app/main/default/objects/Challenge__c/fields/Comments_Question_2_Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Comments_Question_2_Lessons_Learned__c</fullName>
    <label>Comments (Question 2, Lessons Learned)</label>
    <type>TextArea</type>
</CustomField>