force-app/main/default/objects/Challenge__c/fields/Comments_Question_3_KOR_KI__c.field-meta.xml
<CustomField>
    <fullName>Comments_Question_3_KOR_KI__c</fullName>
    <label>Comments (Question 3, KOR-KI)</label>
    <type>TextArea</type>
</CustomField>