force-app/main/default/objects/Challenge__c/fields/End_Date_Difference__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Difference__c</fullName>
    <formula>Actual_End_Date__c -  Challenge_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>