force-app/main/default/objects/Challenge__c/fields/Escalation_Path__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Path__c</fullName>
    <label>Escalation Path</label>
    <type>TextArea</type>
</CustomField>