force-app/main/default/objects/Challenge__c/fields/External_Event_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Event_Reference__c</fullName>
    <inlineHelpText>Populate for External Events only.</inlineHelpText>
    <label>External Event Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>