force-app/main/default/objects/Challenge__c/fields/Key_Question_1_KOR_KI__c.field-meta.xml
<CustomField>
    <fullName>Key_Question_1_KOR_KI__c</fullName>
    <defaultValue>&quot;Did the Business consider scenario analysis and emerging risks in its operational risk identification process?&quot;</defaultValue>
    <label>Key Question 1 (KOR-KI)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>