force-app/main/default/objects/Challenge__c/fields/Key_Question_1_Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Key_Question_1_Lessons_Learned__c</fullName>
    <defaultValue>&quot;Does the information provided in the report adequately support the documented conclusions?&quot;</defaultValue>
    <label>Key Question 1 (Lessons Learned)</label>
    <type>TextArea</type>
</CustomField>