force-app/main/default/objects/Challenge__c/fields/Key_Question_2_KOR_KI__c.field-meta.xml
<CustomField>
    <fullName>Key_Question_2_KOR_KI__c</fullName>
    <defaultValue>&quot;Was there consideration of underlying or supporting key operational risks in a prioritization process?&quot;</defaultValue>
    <label>Key Question 2 (KOR-KI)</label>
    <type>TextArea</type>
</CustomField>