force-app/main/default/objects/Challenge__c/fields/Key_Question_2_Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Key_Question_2_Lessons_Learned__c</fullName>
    <defaultValue>&quot;Were the Businesses and Functional Team impacted by the event engaged in the analysis?&quot;</defaultValue>
    <label>Key Question 2  (Lessons Learned)</label>
    <type>TextArea</type>
</CustomField>