force-app/main/default/objects/Challenge__c/fields/Key_Question_3_KOR_KI__c.field-meta.xml
<CustomField>
    <fullName>Key_Question_3_KOR_KI__c</fullName>
    <defaultValue>&quot;Where operational risks align to centralized functions (e.g. Technology, Fraud, Third Party, etc.), have other SMEs been involved to comment on the proposed operational risks?&quot;</defaultValue>
    <label>Key Question 3 (KOR-KI)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>