force-app/main/default/objects/Challenge__c/fields/Key_Question_3_Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Key_Question_3_Lessons_Learned__c</fullName>
    <defaultValue>&quot;Was the information gathered to identify the details surrounding the loss sufficient?&quot;</defaultValue>
    <label>Key Question 3  (Lessons Learned)</label>
    <type>TextArea</type>
</CustomField>