force-app/main/default/objects/Challenge__c/fields/LCS_ID__c.field-meta.xml
<CustomField>
    <fullName>LCS_ID__c</fullName>
    <inlineHelpText>Populate for Internal Events only.</inlineHelpText>
    <label>Internal ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>