force-app/main/default/objects/Challenge__c/fields/Legal_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Consultation__c</fullName>
    <label>Legal Consultation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before commencement</fullName>
            </value>
            <value>
                <fullName>Before publication</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>