force-app/main/default/objects/Challenge__c/fields/Managed_Geography_Unit__c.field-meta.xml
<CustomField>
    <fullName>Managed_Geography_Unit__c</fullName>
    <label>Geography</label>
    <length>50</length>
    <type>Text</type>
</CustomField>