force-app/main/default/objects/Challenge__c/fields/My_Notes__c.field-meta.xml
<CustomField>
    <fullName>My_Notes__c</fullName>
    <label>My Notes</label>
    <type>TextArea</type>
</CustomField>