force-app/main/default/objects/Challenge__c/fields/Notes1__c.field-meta.xml
<CustomField>
    <fullName>Notes1__c</fullName>
    <label>Notes1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>