force-app/main/default/objects/Challenge__c/fields/Overall_Observations__c.field-meta.xml
<CustomField>
    <fullName>Overall_Observations__c</fullName>
    <label>Overall Observations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>