force-app/main/default/objects/Challenge__c/fields/Primary_Business_Op_Risk_Manager__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Op_Risk_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Business Op Risk Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>