force-app/main/default/objects/Challenge__c/fields/Primary_Independent_Challenger__c.field-meta.xml
<CustomField>
    <fullName>Primary_Independent_Challenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Challenges1</relationshipName>
    <type>Lookup</type>
</CustomField>