force-app/main/default/objects/Challenge__c/fields/Quip_URL__c.field-meta.xml
<CustomField>
    <fullName>Quip_URL__c</fullName>
    <label>Quip URL</label>
    <type>Url</type>
</CustomField>