force-app/main/default/objects/Challenge__c/fields/Reporting_L1__c.field-meta.xml
<CustomField>
    <fullName>Reporting_L1__c</fullName>
    <label>Top Level Reporting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>