force-app/main/default/objects/Challenge__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <label>Reporting Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Q 2015</fullName>
            </value>
            <value>
                <fullName>2Q 2015</fullName>
            </value>
            <value>
                <fullName>3Q 2015</fullName>
            </value>
            <value>
                <fullName>4Q 2015</fullName>
            </value>
            <value>
                <fullName>1Q 2016</fullName>
            </value>
            <value>
                <fullName>2Q 2016</fullName>
            </value>
            <value>
                <fullName>3Q 2016</fullName>
            </value>
            <value>
                <fullName>4Q 2016</fullName>
            </value>
            <value>
                <fullName>1Q 2017</fullName>
            </value>
            <value>
                <fullName>2Q 2017</fullName>
            </value>
            <value>
                <fullName>3Q 2017</fullName>
            </value>
            <value>
                <fullName>4Q 2017</fullName>
            </value>
            <value>
                <fullName>1Q 2018</fullName>
            </value>
            <value>
                <fullName>2Q 2018</fullName>
            </value>
            <value>
                <fullName>3Q 2018</fullName>
            </value>
            <value>
                <fullName>4Q 2018</fullName>
            </value>
            <value>
                <fullName>1Q 2019</fullName>
            </value>
            <value>
                <fullName>2Q 2019</fullName>
            </value>
            <value>
                <fullName>3Q 2019</fullName>
            </value>
            <value>
                <fullName>4Q 2019</fullName>
            </value>
            <value>
                <fullName>1Q 2020</fullName>
            </value>
            <value>
                <fullName>2Q 2020</fullName>
            </value>
            <value>
                <fullName>3Q 2020</fullName>
            </value>
            <value>
                <fullName>4Q 2020</fullName>
            </value>
            <value>
                <fullName>1Q 2021</fullName>
            </value>
            <value>
                <fullName>2Q 2021</fullName>
            </value>
            <value>
                <fullName>3Q 2021</fullName>
            </value>
            <value>
                <fullName>4Q 2021</fullName>
            </value>
            <value>
                <fullName>1Q 2022</fullName>
            </value>
            <value>
                <fullName>2Q 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>