force-app/main/default/objects/Challenge__c/fields/Response_to_KOR_KI_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Response_to_KOR_KI_Question_2__c</fullName>
    <label>Response to KOR-KI Question 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>