force-app/main/default/objects/Challenge__c/fields/Risk_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Acceptance__c</fullName>
    <defaultValue>&quot;Business accepted risk without taking additional actions?&quot;</defaultValue>
    <label>Risk Acceptance</label>
    <type>TextArea</type>
</CustomField>