force-app/main/default/objects/Challenge__c/fields/Risk_Acceptance_Details__c.field-meta.xml
<CustomField>
    <fullName>Risk_Acceptance_Details__c</fullName>
    <label>Risk Acceptance Details</label>
    <type>TextArea</type>
</CustomField>