force-app/main/default/objects/Challenge__c/fields/Risk_Collab_Link__c.field-meta.xml
<CustomField>
    <fullName>Risk_Collab_Link__c</fullName>
    <label>Risk Collab Link</label>
    <type>Url</type>
</CustomField>