force-app/main/default/objects/Challenge__c/fields/Risk_Management_Link__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_Link__c</fullName>
    <label>Risk Management Link</label>
    <type>Url</type>
</CustomField>