force-app/main/default/objects/Challenge__c/fields/Risk_Remediation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Remediation__c</fullName>
    <defaultValue>&quot;Business agreement to take actions recommended by risk management team?&quot;</defaultValue>
    <label>Risk Remediation</label>
    <type>TextArea</type>
</CustomField>