force-app/main/default/objects/Challenge__c/fields/Risk_Remediation_y_n__c.field-meta.xml
<CustomField>
    <fullName>Risk_Remediation_y_n__c</fullName>
    <label>Risk Remediation (Yes/No)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>