force-app/main/default/objects/Challenge__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <defaultValue>&quot;Operational Risk&quot;</defaultValue>
    <label>Risk Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>