force-app/main/default/objects/Challenge__c/fields/Scheduled_Days__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Days__c</fullName>
    <formula>Challenge_End_Date__c -  Challenge_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>