force-app/main/default/objects/Challenge__c/fields/Secondary_Business_Op_Risk_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Business_Op_Risk_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Business Op Risk Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Challenges2</relationshipName>
    <type>Lookup</type>
</CustomField>