force-app/main/default/objects/Challenge__c/fields/Secondary_Independent_Challenger__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Independent_Challenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Challenges3</relationshipName>
    <type>Lookup</type>
</CustomField>