force-app/main/default/objects/Challenge__c/fields/Start_Date_Difference__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Difference__c</fullName>
    <formula>Actual_Start_Date__c -  Challenge_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>