force-app/main/default/objects/Challenge__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <externalId>true</externalId>
    <label>Vendor Relationship</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>