force-app/main/default/objects/Challenge__c/recordTypes/KOR_KI_Challenge.recordType-meta.xml
<RecordType>
    <fullName>KOR_KI_Challenge</fullName>
    <active>true</active>
    <label>Operational Risk</label>
</RecordType>