force-app/main/default/objects/Challenge__c/recordTypes/Lessons_Learned.recordType-meta.xml
<RecordType>
    <fullName>Lessons_Learned</fullName>
    <active>true</active>
    <label>Lessons Learned</label>
</RecordType>