force-app/main/default/objects/Challenge__c/validationRules/End_date_cannot_be_less_than_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_cannot_be_less_than_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Challenge_End_Date__c &lt;  Challenge_Start_Date__c</errorConditionFormula>
    <errorMessage>Challenge End Date cannot be less than Challenge Start Date.</errorMessage>
</ValidationRule>