force-app/main/default/objects/Challenge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Challenge_Type__c</columns>
    <columns>Challenge_Title__c</columns>
    <columns>Challenge_Status__c</columns>
    <columns>Challenge_Entity_Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>