force-app/main/default/objects/Challenge__c/listViews/Challenges_I_Created.listView-meta.xml
<ListView>
    <fullName>Challenges_I_Created</fullName>
    <columns>NAME</columns>
    <columns>Challenge_Title__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Challenge_Status__c</columns>
    <columns>Primary_Business_Op_Risk_Manager__c</columns>
    <columns>Primary_Independent_Challenger__c</columns>
    <filterScope>Mine</filterScope>
    <label>Open Operational Risk Reviews I Created</label>
</ListView>